--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "foreman start"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
@@ -16,5 +16,12 @@
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
     "socket.io": "^1.3.6"
+  },
+  "devDependencies": {
+    "chai": "^3.3.0",
+    "co-mocha": "^1.1.2",
+    "electron-prebuilt": "^0.33.7",
+    "hippie": "^0.4.0",
+    "nightmare": "^2.0.7"
   }
 }
